# rustfirmware

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.rst  link.x
.cargo/: config.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
src/: devicetree.rs  diagnostics.rs  dtb.rs  dtb_memory.rs  dtb_read.rs  dtb_write.rs  ext4.rs  fat.rs  filesystem.rs  gpt.rs  interrupts.rs  linux.rs  main.rs  memory.rs  partition.rs  print.rs  sbi.rs  virtio.rs
tests/data/: .gitignore  in.dts  in_with_chosen_before_memory.dts  memory_map_reserved_regions.dts  ok_backup.img  ok_primary.img
